ecmascript/parser/tests/test262-error-references/fail/d10b36aa74a59bcf.js.stderr
error: Unexpected token `}`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/d10b36aa74a59bcf.js:1:1
  |
1 | }
  | ^

